adding some files, modifiying index.html, script.js, & styles.css

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Muhammad Avicena | Personal Sub Website</title>
+    <title>Home | Personal Sub Website</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel&display=swap" />
 </head>
@@ -14,8 +15,8 @@
     <header>
         <nav class="navbar">
             <ul class="navbar-list">
-                <li class="navbar-item"><a href="#">Home</a></li>
-                <li class="navbar-item"><a href="#">Contact</a></li>
+                <li class="navbar-item"><a href="">Home</a></li>
+                <li class="navbar-item"><a href="./contact.html">Get In Touch</a></li>
             </ul>
         </nav>
     </header>
@@ -24,8 +25,9 @@
             <img class="profile-picture" src="./img/picture_me.jpg" alt="profile_picture" />
             <h1>Muhammad Avicena <span class="thin-text">· (he/him)</span></h1>
             <p>Software Engineer, Content Creator, & Mentor</p>
+            
         </section>
-        <section class="section">
+        <section class="about-section">
             <h2>About Me</h2>
             <p>
                 Hello, I'm
@@ -40,14 +42,14 @@
                 the latest tools to develop innovative solutions that surpass
                 expectations.
             </p>
-            <a href="https://drive.google.com/file/d/1FztK1DlwNQe3VmWfybSYWz3v7_DzoJ2e/view?usp=drive_link">
-                <button class="resume-button">Click to see resume</button>
+            <a href="https://avicena.dev" target="_blank">
+                <button class="resume-button">Learn more..</button>
             </a>
 
         </section>
 
-        <section class="section">
-            <h2>Find me on:</h2>
+        <section class="sosmed-section">
+            <h2>Find me on :</h2>
 
             <ul>
                 <li><a href="https://avicena.dev"><img class="icon" src="./img/web.png">
@@ -55,17 +57,18 @@
                 <li><a href="https://github.com/muhammad-avicena"><img class="icon" src="./img/github.png">
                         git/muhammad-avicena</a></li>
                 <li><a href="https://www.instagram.com/ryuhideaki.dev"><img class="icon" src="./img/ig.png">
-                        ig/ryuhideaki.dev</a></li>
+                        ig/@ryuhideaki.dev</a></li>
                 <li><a href="https://www.youtube.com/@MuhammadAvicena"><img class="icon" src="./img/ytb.png">
-                        yt/MuhammadAvicena</a></li>
+                        yt/@MuhammadAvicena</a></li>
                 <li><a href="https://www.linkedin.com/in/muhammad-avicena"><img class="icon" src="./img/linkedin.png">
                         in/Muhammad Avicena</a></li>
             </ul>
-
-            <button id="toastButton" class="toast-button">Try me </button> 
+            <audio id="sound" src="./utils/secret.mp3"></audio>
+            <h2>Interesting Fact :</h2>
+            <button id="toastButton" class="toast-button">Try me !</button>
         </section>
 
-        <section class="section">
+        <section class="tools-section">
             <h2>⚡ Technologies & Tools :</h2>
             <div class="badge">
                 <img src="https://img.shields.io/badge/-JavaScript-black?style=flat-square&logo=javascript"
